Various code smells solved